# csp-doctor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLONE_FEATURES.md  Dockerfile  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  UPDATE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  CI.md  CODE_OF_CONDUCT.md  CODE_SCANNING.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md  csp-doctor.suppressions.example
src/csp_doctor/: __init__.py  __main__.py  cli.py  core.py  schema.py  style.py  violations.py
tests/: test_cli.py  test_core.py  test_violations.py
